--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
           
         </div> 
     </div>
+    <div class="responsive p-3 text-success-emphasis bg-success-subtle border border-success-subtle rounded-3">
+      Bienvenido a <span class="title">GAMER PLAY</span> una pagina en construccion donde te enseñaremos como hemos hecho nuestro logo y banda sonora 
+       
+     </div> 
     <div class="container">
       <div class="logo">
         <p>¿Quieres ver nuestro logo de cerca?</p>
