--- a/vide.html
+++ b/vide.html
@@ -56,7 +56,7 @@
         </div>
         <h1 class="titleVideo">Nuestro video</h1>
         <div class="container">
-            <iframe class="vid" width="935" height="526" src="https://www.youtube.com/embed/UdZfqCUB9UI" title="Trabajo de diseño web" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe class="vid" width="100%" height="526" src="https://www.youtube.com/embed/UdZfqCUB9UI" title="Trabajo de diseño web" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top foot">
             <div class="col-md-4 d-flex align-items-center">
